...
                      ScaffoldMessenger.of(context).showSnackBar(SnackBar(
                        content: Text(error.toString()),
                      ));
                    }
                  },
                  icon: const Icon(IconlyLight.login),
                  key: Key('google_sign_in_button'),
                  label: const Text("Đăng nhập với Google"),
                ),
                const SizedBox(height: 20),
              ],
            ),
          ),
        ),
...
